[package]
name = "hamt-rs"
version = "0.1.0"
authors = ["Adit Sachde <23707194+aditsachde@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cid = "0.7.0"
sha2 = "0.9.5"
anyhow = "1.0"
thiserror = "1.0.26"
bitvec = "0.22.3"
multihash = "0.14.0"
libipld = "0.12.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
rayon = "1.5.1"
minicbor = { version = "0.12.0", features = ["derive", "std"] }
static_assertions = "1.1.0"
sled = "0.34.7"
lru = "0.7.0"
structopt = "0.3.25"
csv = "1"
unsigned-varint = "0.7.1"
take_mut = "0.2"
ipfs-api-backend-hyper = "0.3"
futures = "0.3.19"
tokio = { version = "1", features = ["full"] }
async-recursion = "1.0.0"
indicatif = { version = "0.16.2", features = ["rayon"] }
bincode = "1.3"
itertools = "0.10.3"
num_cpus = "1"